<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <!-- просто Текстовые метки -->
    <string name="app_name">Почемучка</string>
    <string name="action_settings">Settings</string>
    <string name="zone">Зона: </string>
    <string name="subzone">Подзона: </string>
    <string name="material">Материал: </string>
    
    <!--  ACRA -->
    <string name="crash_toast_text">Ooooops! Возникла ошибка в программе. 
        Просьба выбрать из следующего меню Вашу почтовую программу и отправить разработчику
        информацию об этой ошибке.</string>
    <string name="crash_dialog_text">Ooooops! Возникла ошибка в программе. 
        Помогите разработчику исправить эту ошибку. Для этого нужно выбрать 
        из следующего меню Вашу почтовую программу и отправить разработчику
        информацию с ошибкой.</string>
		<string name="crash_dialog_comment_prompt">Вы можете написать здесь свои комментарии:</string>
		<string name="crash_dialog_title">Почемучка:</string>
		<string name="crash_dialog_ok_toast">Спасибо !</string>
    
    
    <string name="tv_main_title">Введи номер столбца, который хочешь отобразить и нажми кн.Qurey. 
        	\nИли нажми кн.Launch, чтобы получить список детей.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings_my_activity">Settings я создал Activity</string>
    <string name="action_settings_pref_activity">Settings with PreferenceActivity</string>
    <string name="action_settings_pref_fragment">Settings with PreferenceFragment</string>
    <string name="title_settings_cur_ip">You will use this ip to connect to FireBird Data Base:</string>
    <string name="title_settings_dbip">Choose another ip to connect:</string>
    <string name="hint_settings_dbip">choose from the list or add/remove it</string>
    <string name="bt_settings_add">Add IP</string>
    <string name="bt_settings_edit">Edit IP</string>

    <!-- Strings for Activity "Settings" -->
    <string name="prefs_title_et_enter_new_ip">Enter New IP to Connect FireFird DB</string>
    <string name="prefs_et_enter_new_ip_summary">Summary of EditText 1</string>
    <string name="prefs_title_list_of_ips">IP to FireBird DB</string>
    <string name="prefs_title_list_of_ips_summary">current ip is </string>
    <string name="bt_test_title_connect">Connected DB</string>
    <string name="bt_test_title_disconnect">Disconnected DB</string>
    <string name="btTestTitle1">Add Lesson</string>
    <string name="bt_test_title_persons">ФИО</string>
    
	<!-- ActionBar -->
    	<!-- ActionBar.Tabs -->
    <string name="ab_zones">Зоны</string>
    <string name="ab_subzones">Подзоны</string>
    <string name="ab_materials">Материалы</string>
    <string name="ab_skills">Навыки</string>
    <string name="ab_search">Поиск</string>
    
    	<!-- fr_person_detail_list; ActionBar items -->
    <string name = "ab_add">Добавить</string>
    <string name = "ab_show_skills">Показать навыки</string>
    <string name = "ab_connect">Соединиться</string>
    <string name = "ab_disconnect">Разъединиться</string>
    
    
    <!-- others -->
    <!-- frd_skill_select -->

    <!-- d_fr_add_ip -->
    <string name="tv_ip">IP адрес:</string>
    <string name="tv_descr">Описание:</string>
    <string name="et_hint_add_ip">new IP to add</string>
    <string name="et_hint_descript">description</string>
    <string name="tv_login_db">логин к БД:</string>
    <string name="tv_passw_db">пароль к БД:</string>
    <string name="bt_add">Добавить</string>
    <string name="bt_cancel">Отменить</string>

    <!-- frd_date_select -->
    <string name="tv_date_select">Выберите дату для навыка:</string>
    <string name="bt_today">Сегодня</string>
    <string name="bt_tomorrow">Завтра</string>

    <!-- fragment_skills_selected -->
    <string name="tv_skills_selected">Выбранные навыки:</string>
    <string name="bt_add_skill">Ещё навык</string>
    <string name="bt_write">Записать урок</string>
    
    <!-- frd_skill_score -->
    <string name="title_skill_score">Как будем оценивать?</string>
    <string name="tv_value">Значение:</string>
    <string name="tv_score">Оценка:</string>
    <string name="bt_add_to_lesson">добавить в урок</string>
    


</resources>
