<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date_select"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:firstDayOfWeek="2"
            android:fitsSystemWindows="true"
            android:calendarViewShown="true"
            android:spinnersShown="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMyClick"
                android:text="@string/bt_today" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMyClick"
                android:text="@string/bt_tomorrow" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

