<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ua.sanya5791.pochemuchka.SettingsActivity" >

    <TextView
        android:id="@+id/textView121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_settings_cur_ip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_settings_curr_ip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Choose IP"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_settings_dbip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="left"
        android:hint="@string/hint_settings_dbip"
        android:text="@string/title_settings_dbip"
        android:textStyle="normal" />

    <ListView
        android:id="@+id/lv_out1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.44" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <EditText
            android:id="@+id/etIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:focusable="false"
            android:hint="new IP to add"
            android:inputType="none"
            android:maxLength="15"
            android:maxLines="1"
            android:onClick="onMyClick" />

        <EditText
            android:id="@+id/etDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:focusable="false"
            android:hint="description"
            android:inputType="text"
            android:maxLines="1" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onMyClick"
        android:text="new IP" />

    <Button
        android:id="@+id/bt_add_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:enabled="false"
        android:onClick="onMyClick"
        android:text="@string/bt_settings_add"
        android:visibility="gone" />

</LinearLayout>